# data-synth

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: auto-review.yml  ci.yml  publish.yml
docs/: landing-en.md  landing-zh.md
src/datasynth/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  prompts.py  synthesizer.py
tests/: __init__.py  test_cli.py  test_config.py  test_mcp_server.py  test_prompts.py  test_synthesizer.py
