[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datasynth"
version = "0.1.0"
description = "数据合成工具 - 基于种子数据批量生成高质量训练数据"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "liukai" }
]
keywords = ["synthesis", "data-generation", "llm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
llm = ["anthropic>=0.18", "openai>=1.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest", "ruff"]
all = ["knowlyr-datasynth[llm,mcp,dev]"]

[project.scripts]
knowlyr-datasynth = "datasynth.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datasynth = "datasynth.mcp_server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/datasynth"]

[tool.ruff]
line-length = 100
target-version = "py310"
