[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowlyr-datasynth"
version = "0.1.0"
description = "Data synthesis toolkit - batch generate high-quality training data from seed examples using LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Liu Kai", email = "mrliukai@gmail.com" }
]
keywords = ["synthesis", "data-generation", "llm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
llm = ["anthropic>=0.18", "openai>=1.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest", "ruff"]
all = ["knowlyr-datasynth[llm,mcp,dev]"]

[project.scripts]
knowlyr-datasynth = "datasynth.cli:main"

[project.entry-points."mcp.servers"]
knowlyr-datasynth = "datasynth.mcp_server:serve"

[project.urls]
Homepage = "https://github.com/liuxiaotong/data-synth"
Documentation = "https://github.com/liuxiaotong/data-synth#readme"
Repository = "https://github.com/liuxiaotong/data-synth"
Issues = "https://github.com/liuxiaotong/data-synth/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datasynth"]

[tool.ruff]
line-length = 100
target-version = "py310"
